<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_event">

    <fragment
            android:id="@+id/navigation_event"
            android:name="com.flurry.android.sample.analytics.ui.fragment.EventFragment"
            android:label="@string/title_event"
            tools:layout="@layout/fragment_event"/>

    <fragment
            android:id="@+id/navigation_crash"
            android:name="com.flurry.android.sample.analytics.ui.fragment.CrashFragment"
            android:label="@string/title_crash"
            tools:layout="@layout/fragment_crash"/>

    <fragment
            android:id="@+id/navigation_more"
            android:name="com.flurry.android.sample.analytics.ui.fragment.OtherFeaturesFragment"
            android:label="@string/title_more"
            tools:layout="@layout/fragment_other_features"/>
</navigation>