<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_id_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/error_class_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/error_id_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Error Id"
                android:inputType="text"
                android:text="@string/default_error_id"
                android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_class_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/error_id_input_layout"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/error_class_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Error Class Name"
                android:inputType="text"
                android:text="@string/default_error_class"
                android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_msg_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_id_input_layout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/error_msg_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Error Message"
                android:inputType="text"
                android:text="@string/default_error_message"
                android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exception_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_msg_input_layout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/exception_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Exception Message"
                android:inputType="text"
                android:text="@string/default_error_exception"
                android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/breadcrumb_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exception_input_layout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/breadcrumb_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Breadcrumb Message"
                android:inputType="text"
                android:text="@string/default_breadcrumb_message"
                android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/bt_log_error_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/log_error_class"
            app:layout_constraintBottom_toTopOf="@+id/bt_log_exception"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breadcrumb_input_layout"
            app:layout_constraintVertical_chainStyle="packed" />

    <Button
            android:id="@+id/bt_log_exception"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/log_exception"
            app:layout_constraintBottom_toTopOf="@+id/bt_log_breadcrumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_log_error_class" />

    <Button
            android:id="@+id/bt_log_breadcrumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/log_breadcrumb"
            app:layout_constraintBottom_toTopOf="@+id/bt_force_crash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_log_exception" />

    <Button
            android:id="@+id/bt_force_crash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/force_crash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_log_breadcrumb" />
</androidx.constraintlayout.widget.ConstraintLayout>